--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Article one | Himanshu Beniwal</title>
+        <meta name="viewport" content="widht=device-width, initial-scale=1" />
     </head>
     <body>
         <div>
