--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -12,7 +12,7 @@
     </style>
     </head>
     <body>
-        <div>
+        <div class="container">
             <div>
                 <a href="/">Home Page</a>
             </div>
