[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,10 +5,13 @@
     <style>
         .container {
             max-width: 800px;
-            margin : 0 auto;
-            color: grey;
-            font-family : monospace;
-        }
+            margin: 0 auto;
+            color: #504747;
+            font-family: monospace;
+            padding-top: 55px;
+            padding-left: 20px;
+            padding-right: 20px;
+                }
     </style>
     </head>
     <body>
