[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,6 +2,17 @@
     <head>
         <title>Article three | Himanshu Beniwal</title>
         <meta name="viewport" content="widht=device-width, initial-scale=1" />
+    <style>
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            color: #504747;
+            font-family: monospace;
+            padding-top: 55px;
+            padding-left: 20px;
+            padding-right: 20px;
+                }
+    </style>
     </head>
     <body>
         <div>
