--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -15,15 +15,17 @@
     </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home Page</a>
-        </div>
-        <hr />
-          <h3>Article Two </h3>
-          <div>August 15,2017</div>
-        <div>
-            <p>This is content for my second aritwagiagbaenkfrab jrb vfkv jfb  ljlfnekr ben ner net ne</p>
-            
+        <div class="container">
+            <div>
+                <a href="/">Home Page</a>
+            </div>
+            <hr />
+              <h3>Article Two </h3>
+              <div>August 15,2017</div>
+            <div>
+                <p>This is content for my second aritwagiagbaenkfrab jrb vfkv jfb  ljlfnekr ben ner net ne</p>
+                
+            </div>
         </div>
     </body>
 </html>
