[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,10 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Welcome HB's.
+            Welcome HB's. 
+            <div id="tobechange">
+                This is goin to be changed after the page loadssssss...
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
