--- a/ui/index.html
+++ b/ui/index.html
@@ -20,6 +20,7 @@
                 </div>
              
              <div class='footer'>
+                 <p>This button <button id="counter"><h1>HERE !! </h1></button> have been clicked - <span id="count">0</span> - many times.</p>
              </div>
         </div>
             <script type="text/javascript" src="/ui/main.js">
