--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
                 </div>
              
              <div class='footer'>
-                 <p>This button <button id="counter">HERE !!</button> have been clicked - <span id="count">0</span> - many times.</p>
+                 <p>This  <button id="counter">Button</button> have been clicked - <span id="count">0</span> - many times.</p>
              </div>
         </div>
             <script type="text/javascript" src="/ui/main.js">
