--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container center">
-                <h1> Personal Page </h1>
+                <h1> Portfolio </h1>
             <img id='bny' src="https://pbs.twimg.com/profile_images/882729853610409984/QhZUNBfW_400x400.jpg" class="img-medium"/>
                 <br /> 
             <hr />
