--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="container center">
+        <div class="container">
             <img id='bny' src="https://pbs.twimg.com/profile_images/882729853610409984/QhZUNBfW_400x400.jpg" class="img-medium"/>
                 <br /> 
             <hr />
