[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
             <br />
                 <input type="text" id="name" placeholder="Name" />
                 <input type="submit" id= "submit_btn" value="Submit" />
-                <ul class="namelist">
+                <ul id="namelist">
                     
                 </ul>
             
