[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,13 @@
                     <h1> Professional Information </h1>
                     <p>Web-Developer , Coder , Rider!!! </p>
                 </div>
+                <hr />
+                <div>
+                    <h1> Login to unlock awesome features </h1>
+                    <input type="text" id="username" placeholder="username" />
+                    <input type="password" id="password" />
+                    <input type="submit" id="submit_btn" />
+                </div>
              
              <div class='footer'>
                  <p>This  <button id="counter">Button</button> have been clicked - <span id="count">0</span> - many times.</p>
